--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,6 @@ main{
 
 .chat{
     width: 100%;
-    /* debug */
     background-image: url(../img/mine.jpg);
 }
 
@@ -61,11 +60,27 @@ main{
     display: flex;
     justify-content: space-between;
     align-items: center ;
+    padding: 0 15px;
+}
+
+#user{
+    display: flex;
+    align-items: center;
+}
+
+#user img{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+
+#user span{
+    margin-left: 5px;
+    font-size: 14px;
 }
 
 .icons{
     color: #b1b1b1;
-    padding: 0 15px;
 }
 
 .icons .center-icon{
