--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,9 @@ body{
     font-family: Helvetica, sans-serif;
 }
 
-
+img{
+    max-width: 100%;
+}
 /* regole header */
 
 #app{
@@ -43,7 +45,7 @@ main{
 }
 
 .contacts{
-    width: 390px;
+    width: 490px;
     /* debug */
     background-color: coral;
 }
@@ -85,5 +87,57 @@ main{
 
 .icons .center-icon{
     margin-inline: 15px;
+}
+
+#notifications{
+    height: 58px;
+    background-color: #8edafc;
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+}
+
+#notifications .fa-bell-slash{
+    border: 1px solid #fff;
+    border-radius: 50%;
+    background-color: #fff;
+    padding: 10px;
+    color: #8edafc;
+}
+.msg-notifications a, .msg-notifications span{
+    display: block;
+    font-size: 13px;
+    margin-left: 10px;
+}
+
+.msg-notifications a{
+    color: #5e91a8;
+}
+
+.search{
+    height: 40px;
+    background-color: #fff;
+    padding: 5px;
+    display: flex;
+}
+
+.search input{
+    width: 100%;
+    height: 30px;
+    border-color: #b1b1b1 #b1b1b1 #b1b1b1  white;
+    padding-left: 15px;
+}
+
+.search i{
+    border-color: #b1b1b1  white #b1b1b1 #b1b1b1;
+    height: 30px;
+    line-height: 30px;
+    color: #b1b1b1 ;
+    padding: 0 10px 0 20px;
+}
+
+.search input, .search i{
+    border-style: solid;
+    border-width: 1px;
 }
                     
