--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,12 @@ body{
 img{
     max-width: 100%;
 }
-/* regole header */
 
+/* regole header */
 #app{
     position: relative;
     background-color: #dbdbd2;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 header{
@@ -27,7 +27,6 @@ header{
 }
 
 /* regole main */
-
 main{
     height: calc(100vh - 100px);
     display: flex;
@@ -69,7 +68,7 @@ main{
     align-items: center;
 }
 
-#user img{
+.avatar img{
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -150,21 +149,57 @@ main{
     align-items: center;
 }
 
-.chat-avatar img{
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-}
-
 .info-avatar{
     margin-left: 5px;
 }
 .avatar-name{
-    font-size: 13px;
+    font-size: 14px;
     display: block;
 }
 
 .last-access{
     font-size: 12px;
     color: #919191;
+}
+
+.chat-message{
+    display: flex;
+    padding: 15px;
+    /* debug */
+    /* background-color: #e9ebeb; */
+}
+
+.info-chat{
+    margin-left: 15px;
+}
+
+.info-text{
+    color: #999da0;
+    font-size: 11px;
+}
+
+.conversation{
+    height: calc(100% - 50px - 60px);
+    overflow-y: auto;
+    /* debug */
+    background-color: cornflowerblue;
+}
+.area-message{
+    height: 60px;
+    background-color: #f3eeea;
+    color: #6b7376;
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+}
+
+.area-message i{
+    font-size: 20px;
+}
+
+.area-message input{
+    flex-grow: 1;
+    margin-inline: 15px;
+    height: 40px;
+    padding: 5px;
 }
