--- a/css/style.css
+++ b/css/style.css
@@ -171,9 +171,10 @@ i{
     padding: 15px;
 }
 
-.chat-message:hover{
+.active{
     background-color: #e9ebeb;
 }
+
 .chat-info{
     display: flex;
 }
